--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -2,7 +2,7 @@
     height: 5vh;
     width: 100vw;
     position: fixed;
-    background-color: lightgoldenrodyellow;
+    background-color: gainsboro;
     margin: 0;
     padding: 0;
 }
@@ -21,7 +21,7 @@
 }
 
 .nav-wrapper li.active{
-    border-bottom: solid black;
+    border-bottom: solid #282828;
 }
 
 .nav-wrapper li:hover{
@@ -34,7 +34,11 @@
     padding: 1rem;
     text-decoration: none;
     font-size: 1rem;
-    height: 50%;
+    height: 40%;
+}
+
+.nav-wrapper a:visited{
+    color: #282828;
 }
 
 /* 
